# task-tracker-fastapi

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: config.py  main.py
app/api/v1/endpoints/: books.py
app/core/: logger.py
app/db/: session.py
app/depends/: book_service.py  db.py
app/depends/repository/: book_repository.py  json_file_repository.py
app/models/: book.py
app/repositories/: book_repository.py  json_file_repository.py  jsonbin_repository.py
app/repositories/interfaces/: book_repository_interface.py
app/schemas/: book.py
app/services/: book_service.py
data/: books.json
